--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,6 +1,6 @@
-name = "xuanlanwuzhea"
+name = "mycloud"
 main = "_worker.js"  # 你的 JS 逻辑代码
-compatibility_date = "2026-02-10"
+compatibility_date = "2026-02-05"
 
 [limits]
 cpu_ms = 300000
@@ -22,5 +22,4 @@ head_sampling_rate = 1
 [[rules]]
 type = "CompiledWasm"
 globs = ["**/*.wasm"]
-
 fallthrough = true
