--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,4 +1,4 @@
-name = "mycloud"
+name = "xuanlanwuzhea"
 main = "_worker.js"  # 你的 JS 逻辑代码
 compatibility_date = "2026-02-05"
 
@@ -22,4 +22,5 @@ head_sampling_rate = 1
 [[rules]]
 type = "CompiledWasm"
 globs = ["**/*.wasm"]
+
 fallthrough = true
