--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,9 +1,13 @@
 name = "xuanlanwuzhea"
 main = "_worker.js"  # 你的 JS 逻辑代码
-compatibility_date = "2026-02-05"
+compatibility_date = "2026-02-10"
 
 [limits]
 cpu_ms = 300000
+
+[[routes]]
+pattern = "oklm.hh1.indevs.in"
+custom_domain = true
 
 [observability]
 enabled = false
@@ -24,3 +28,4 @@ type = "CompiledWasm"
 globs = ["**/*.wasm"]
 
 fallthrough = true
+
